[gd_scene load_steps=3 format=3 uid="equipment_menu_scene_1"]

[ext_resource path="res://scripts/ui/equipment_menu.gd" type="Script" id=1]

[node name="EquipmentMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.05, 0.1, 0.15, 0.95)

[node name="VBox" type="VBoxContainer" parent="."]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9

[node name="Title" type="Label" parent="VBox"]
text = "Экипировка"
theme_override_font_sizes/font_size = 28
horizontal_alignment = 1

[node name="VisualModeButton" type="Button" parent="VBox"]
text = "Показать стиль"

[node name="HSeparator" type="HSeparator" parent="VBox"]

[node name="HBox" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="EquipmentSlots" type="VBoxContainer" parent="VBox/HBox"]
layout_mode = 2
custom_minimum_size = Vector2(400, 0)

[node name="WeaponMainSlot" type="Panel" parent="VBox/HBox/EquipmentSlots"]
custom_minimum_size = Vector2(0, 60)

[node name="WeaponOffhandSlot" type="Panel" parent="VBox/HBox/EquipmentSlots"]
custom_minimum_size = Vector2(0, 60)

[node name="HelmetSlot" type="Panel" parent="VBox/HBox/EquipmentSlots"]
custom_minimum_size = Vector2(0, 60)

[node name="ChestSlot" type="Panel" parent="VBox/HBox/EquipmentSlots"]
custom_minimum_size = Vector2(0, 60)

[node name="LegsSlot" type="Panel" parent="VBox/HBox/EquipmentSlots"]
custom_minimum_size = Vector2(0, 60)

[node name="BootsSlot" type="Panel" parent="VBox/HBox/EquipmentSlots"]
custom_minimum_size = Vector2(0, 60)

[node name="GlovesSlot" type="Panel" parent="VBox/HBox/EquipmentSlots"]
custom_minimum_size = Vector2(0, 60)

[node name="Accessory1Slot" type="Panel" parent="VBox/HBox/EquipmentSlots"]
custom_minimum_size = Vector2(0, 60)

[node name="Accessory2Slot" type="Panel" parent="VBox/HBox/EquipmentSlots"]
custom_minimum_size = Vector2(0, 60)

[node name="Accessory3Slot" type="Panel" parent="VBox/HBox/EquipmentSlots"]
custom_minimum_size = Vector2(0, 60)

[node name="StatsPanel" type="Panel" parent="VBox/HBox"]
layout_mode = 2
custom_minimum_size = Vector2(300, 0)

[node name="StatsLabel" type="Label" parent="VBox/HBox/StatsPanel"]
text = "Статы от экипировки:"
theme_override_font_sizes/font_size = 18

[node name="CloseButton" type="Button" parent="VBox"]
text = "Закрыть"

